corpus/comments.txt
==================
HTML Comments
==================

<!-- This is the comment -->

---

(template
  (comment_statement))

==================
HBS Multi-Line Comments
==================

{{!-- This is a
      multi-line comment --}}

---

(template
  (comment_statement))

==================
HBS Single-Line Comments
==================

{{! This is a multi-line comment }}

---

(template
  (comment_statement))

==================
HBS Single-Line Comments with Line Break
==================

{{! This
    breaks }}

---

(template
  (mustache_statement
    (ERROR (UNEXPECTED '!'))
    (path_expression)
    (path_expression)))

==================
Comment in an element
==================

<div>
  {{! Comment }}
</div>

---

(template
  (element_node
    (element_node_start
      (tag_name))
    (comment_statement)
    (element_node_end
      (tag_name))))
