corpus/element.txt
==================
HTML Element
==================

<div></div>

---

(template
  (element_node
    (element_node_start
      (tag_name))
    (element_node_end
      (tag_name))))

==================
Web Components
==================

<my-web-component></my-web-component>

---

(template
  (element_node
    (element_node_start
      (tag_name))
    (element_node_end
      (tag_name))))

==================
Glimmer components
==================

<MyCoolComponent></MyCoolComponent>

---

(template
  (element_node
    (element_node_start
      (tag_name))
    (element_node_end
      (tag_name))))

==================
Void Elements
==================

<img />

---

(template
  (element_node
    (element_node_void
      (tag_name))))
