corpus/glimmer.txt
==================
Variable Access
==================

{{someVariable.nestedProperty}}

---

(template
  (mustache_statement
    (mustache_statement_start)
    (path_expression)
    (mustache_statement_end)))

==================
Helper Invocation
==================

{{some-helper}}

---

(template
  (mustache_statement
    (mustache_statement_start)
    (path_expression)
    (mustache_statement_end)))
