corpus/handlebars.txt
==================
Variable Access
==================

{{someVariable.nestedProperty}}

---

(template
  (mustache_statement
    (path_expression)))

==================
Helper Invocation
==================

{{some-helper}}

---

(template
  (mustache_statement
    (path_expression)))
