test/corpus/glimmer_components.txt
==================
Block Params
==================

<MyCoolComponent as |foo bar|>
  {{foo}}
  {{bar}}
</MyCoolComponent>

---

(template
  (element_node
    (element_node_start
      (tag_name)
      (block_params
        (path_expression
          (identifier))
        (path_expression
          (identifier))))
    (mustache_statement
      (path_expression
        (identifier)))
    (mustache_statement
      (path_expression
        (identifier)))
    (element_node_end
      (tag_name))))

==================
Modifiers
==================

<div {{on 'click' this.whatever}}></div>

---

(template
  (element_node
    (element_node_start
      (tag_name)
      (mustache_statement
        (path_expression
          (identifier))
        (string_literal)
        (path_expression
          (identifier)
          (identifier))))
    (element_node_end
      (tag_name))))
